--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,8 @@
     "ember-cli-shims": "0.1.1",
     "ember-cli-test-loader": "0.2.2",
     "ember-qunit-notifications": "0.1.0",
-    "numeral": "^1.5.3"
+    "numeral": "^1.5.3",
+    "pretender": "~0.12.0",
+    "Faker": "~3.0.0"
   }
 }
